src/test/ui/parser/assoc-static-semantic-fail.stderr
error: associated `static` items are not allowed
  --> $DIR/assoc-static-semantic-fail.rs:9:5
   |
LL |     static IA: u8 = 0;
   |     ^^^^^^^^^^^^^^^^^^

error: associated `static` items are not allowed
  --> $DIR/assoc-static-semantic-fail.rs:11:5
   |
LL |     static IB: u8;
   |     ^^^^^^^^^^^^^^

error: a static item cannot be `default`
  --> $DIR/assoc-static-semantic-fail.rs:14:5
   |
LL |     default static IC: u8 = 0;
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: associated `static` items are not allowed
  --> $DIR/assoc-static-semantic-fail.rs:14:5
   |
LL |     default static IC: u8 = 0;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: a static item cannot be `default`
  --> $DIR/assoc-static-semantic-fail.rs:17:16
   |
LL |     pub(crate) default static ID: u8;
   |                ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: associated `static` items are not allowed
  --> $DIR/assoc-static-semantic-fail.rs:17:5
   |
LL |     pub(crate) default static ID: u8;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: associated `static` items are not allowed
  --> $DIR/assoc-static-semantic-fail.rs:24:5
   |
LL |     static TA: u8 = 0;
   |     ^^^^^^^^^^^^^^^^^^

error: associated `static` items are not allowed
  --> $DIR/assoc-static-semantic-fail.rs:26:5
   |
LL |     static TB: u8;
   |     ^^^^^^^^^^^^^^

error: a static item cannot be `default`
  --> $DIR/assoc-static-semantic-fail.rs:28:5
   |
LL |     default static TC: u8 = 0;
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: associated `static` items are not allowed
  --> $DIR/assoc-static-semantic-fail.rs:28:5
   |
LL |     default static TC: u8 = 0;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: a static item cannot be `default`
  --> $DIR/assoc-static-semantic-fail.rs:31:16
   |
LL |     pub(crate) default static TD: u8;
   |                ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: associated `static` items are not allowed
  --> $DIR/assoc-static-semantic-fail.rs:31:5
   |
LL |     pub(crate) default static TD: u8;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: associated `static` items are not allowed
  --> $DIR/assoc-static-semantic-fail.rs:38:5
   |
LL |     static TA: u8 = 0;
   |     ^^^^^^^^^^^^^^^^^^

error: associated `static` items are not allowed
  --> $DIR/assoc-static-semantic-fail.rs:40:5
   |
LL |     static TB: u8;
   |     ^^^^^^^^^^^^^^

error: a static item cannot be `default`
  --> $DIR/assoc-static-semantic-fail.rs:43:5
   |
LL |     default static TC: u8 = 0;
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: associated `static` items are not allowed
  --> $DIR/assoc-static-semantic-fail.rs:43:5
   |
LL |     default static TC: u8 = 0;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: a static item cannot be `default`
  --> $DIR/assoc-static-semantic-fail.rs:46:9
   |
LL |     pub default static TD: u8;
   |         ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: associated `static` items are not allowed
  --> $DIR/assoc-static-semantic-fail.rs:46:5
   |
LL |     pub default static TD: u8;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: associated constant in `impl` without body
  --> $DIR/assoc-static-semantic-fail.rs:11:5
   |
LL |     static IB: u8;
   |     ^^^^^^^^^^^^^-
   |                  |
   |                  help: provide a definition for the constant: `= <expr>;`

error: associated constant in `impl` without body
  --> $DIR/assoc-static-semantic-fail.rs:17:5
   |
LL |     pub(crate) default static ID: u8;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-
   |                                     |
   |                                     help: provide a definition for the constant: `= <expr>;`

error[E0449]: unnecessary visibility qualifier
  --> $DIR/assoc-static-semantic-fail.rs:31:5
   |
LL |     pub(crate) default static TD: u8;
   |     ^^^^^^^^^^

error: associated constant in `impl` without body
  --> $DIR/assoc-static-semantic-fail.rs:40:5
   |
LL |     static TB: u8;
   |     ^^^^^^^^^^^^^-
   |                  |
   |                  help: provide a definition for the constant: `= <expr>;`

error: associated constant in `impl` without body
  --> $DIR/assoc-static-semantic-fail.rs:46:5
   |
LL |     pub default static TD: u8;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^-
   |                              |
   |                              help: provide a definition for the constant: `= <expr>;`

error[E0449]: unnecessary visibility qualifier
  --> $DIR/assoc-static-semantic-fail.rs:46:5
   |
LL |     pub default static TD: u8;
   |     ^^^ `pub` not permitted here because it's implied

error: aborting due to 24 previous errors

For more information about this error, try `rustc --explain E0449`.
